Add D/A periodicity and d-layer laws summary

--- a/docs/name3.tex
+++ b/docs/name3.tex
@@ -5682,9 +5682,104 @@ $\Delta F\approx 5$. Численный анализ показал, что пр
 статистически привилегированного совпадения WS-магических нейтронных
 чисел с изотопными полосами живых хабов, и данный эффект следует
 рассматривать как отрицательный результат R\&D, а не как закон модели.
-  
+
+\subsection{Закон геометрической периодичности D/A для s/p-блока}
+
+На уровне геометрической модели каждому реальному элементу сопоставляется атомный граф $G_\mathrm{atom}$ с конечным числом портов, локальной симметрией и спектральным индексом $\chi_\mathrm{spec}$; из $\chi_\mathrm{spec}$ через линейную калибровку к шкале Полинга строятся безразмерные индексы $D$ и $A$ на D/A-плоскости.
+Фактически эта процедура реализована кодом \texttt{core/geom\_atoms.py}, калибровочным скриптом \texttt{fit\_chi\_to\_pauling.py} и таблицей
+\texttt{data/element\_indices\_with\_dblock.csv}.
+
+Пусть под \emph{геометрическим классом} мы будем понимать конечное множество элементов с одинаковой портовой геометрией ($\#\mathrm{ports}$, тип расположения портов) и ролью на D/A-плоскости:
+\begin{itemize}
+  \item $s_\mathrm{donor}$: одно- и двухпортовые s-элементы донорного плато (группы 1–2, $A \approx 0$, $D>0$);
+  \item $p_\mathrm{semihub}$: трёхпортовые p-полумосты на слабом акцепторном плато ($A \approx 0.12$, $D \approx 0$);
+  \item $p_\mathrm{acceptor}$: p-акцепторы на сильном плато ($A \approx 1.237$, $D \approx 0$);
+  \item $\mathrm{inert}$: инертные газы ($D \approx 0$, $A \approx 0$).
+\end{itemize}
+Тогда в диапазоне атомных номеров, покрываемом текущей геометрической таблицей (Geom-Mendeleev~v1, файл \texttt{results/geom\_periodic\_table\_v1.csv}), выполняется следующий эмпирический закон.
+
+\begin{law}[Закон геометрической периодичности D/A для s/p-блока]
+Рассмотрим элементы одного и того же геометрического класса $C$ и разных периодов $p$ (в обычном смысле периодов 2, 3, 4, 5 по $Z$).
+Обозначим через $D_{C,p}$ и $A_{C,p}$ выборочные средние индексов $D$ и $A$ по всем элементам класса $C$ в периоде $p$, а через $\overline{D}_C$, $\overline{A}_C$ — глобальные средние по классу $C$.
+
+Тогда для каждого из классов
+\[
+C \in \{s_\mathrm{donor},\, p_\mathrm{semihub},\, p_\mathrm{acceptor},\, \mathrm{inert}\}
+\]
+наблюдается \emph{геометрическая периодичность} D/A-индексов:
+\begin{equation}
+  D_{C,p} \approx \overline{D}_C,
+  \qquad
+  A_{C,p} \approx \overline{A}_C
+\end{equation}
+для всех реализованных периодов $p$, причём разброс внутри класса по периодам не превышает численного шума, задаваемого калибровкой $\chi_\mathrm{spec} \to \chi_\mathrm{Pauling}$.
+Иными словами, D/A-координаты зависят главным образом от геометрического класса атомного графа и практически не зависят от номера периода.
+\end{law}
+
+Численная проверка этого закона реализована в скрипте \texttt{analysis/test\_geom\_periodicity\_sp.py}, который:
+\begin{itemize}
+  \item читает таблицу \texttt{data/element\_indices\_with\_dblock.csv};
+  \item классифицирует элементы по геометрическим классам $C$ через функцию \texttt{classify\_geom\_row} (скрипт \texttt{export\_geom\_periodic\_table.py});
+  \item вычисляет $(D_{C,p}, A_{C,p})$ для всех комбинаций $(C,p)$ и глобальные средние $(\overline{D}_C,\overline{A}_C)$;
+  \item записывает агрегированные статистики в файл \texttt{results/geom\_periodicity\_sp\_stats.txt}.
+\end{itemize}
+В пределах текущего диапазона $Z$ все четыре геометрических класса демонстрируют постоянство $D$ и $A$ по периодам с отклонениями, не выходящими за рамки численной калибровки. 
+Таким образом, в модели geom-spec~v4.0 s/p-блок поддерживает строгий закон геометрической периодичности D/A-индексов.
+
+\subsection{Закон универсального d-слоя}
+
+Для d-блока в геометрической таблице вводится отдельный класс $d_\mathrm{octa}$: шестипортовые октаэдрические атомные графы
+(реализованные в коде как \texttt{port\_geometry = "octa"}, $\#\mathrm{ports}=6$) с характерной металлической ролью на D/A-плоскости.
+В текущей реализации geom-spec~v4.0 в этот класс попадают по крайней мере элементы 3d-ряда (Sc–Zn), а геометрическая конструкция предназначена для переноса и на более тяжёлые d-элементы.
+
+Ранее на основании ростовых сканов (\texttt{analysis/scan\_dblock\_complexity.py}) был сформулирован закон металлического супер-хаб-слоя: d-элементы создают слой сложности, лежащий существенно выше p-хабов при близкой ядерной $\beta$-линии.
+Geom-Mendeleev~v2 уточняет этот закон, добавляя в него периодическую составляющую.
+
+\begin{law}[Закон универсального d-слоя]
+Рассмотрим все элементы, отнесённые к геометрическому классу $d_\mathrm{octa}$, и для каждого элемента обозначим:
+\begin{itemize}
+  \item $(D,A)$ — его индексы на D/A-плоскости из таблицы \texttt{element\_indices\_with\_dblock.csv};
+  \item $p$ — период (по атомному номеру $Z$);
+  \item $\langle C \rangle$ и $C_\mathrm{max}$ — среднюю и максимальную сложности ростовых графов grower'а из master-таблицы \texttt{geom\_nuclear\_complexity\_summary.csv}.
+\end{itemize}
+Тогда в пределах существующих данных выполняются следующие свойства:
+\begin{enumerate}
+  \item \textbf{Универсальность D/A-позиции.}
+    Средние значения $D$ и $A$ для d-элементов одного периода практически совпадают между собой и по периодам:
+    \begin{equation}
+      D_{d_\mathrm{octa},p} \approx \overline{D}_{d_\mathrm{octa}}, \qquad
+      A_{d_\mathrm{octa},p} \approx \overline{A}_{d_\mathrm{octa}}
+    \end{equation}
+    для всех периодов $p$, по которым имеются данные.
+    Таким образом, d-блок образует единый «металлический слой» на D/A-плоскости.
+  \item \textbf{Универсальность ростовой сложности.}
+    Аналогично, средние значения $\langle C \rangle_{d_\mathrm{octa},p}$ и максимальные сложности $C_{\mathrm{max},d_\mathrm{octa},p}$ по периодам лежат в узком диапазоне вокруг глобальных средних по классу $d_\mathrm{octa}$ и существенно превосходят соответствующие значения для p-хабов.
+    То есть для всех реализованных периодов d-элементы поддерживают один и тот же уровень максимальной сложности ростовых конфигураций.
+\end{enumerate}
+В совокупности это позволяет трактовать d-блок как \emph{универсальный металлический слой} геометрической таблицы: при изменении периода меняется ядро (масса, $N/Z$), но не характерное положение d-элементов на D/A-плоскости и не их ростовой потенциал по сложности.
+
+Численная проверка закона универсального d-слоя реализована скриптом \texttt{analysis/test\_d\_block\_universality.py}, который:
+\begin{itemize}
+  \item читает \texttt{data/element\_indices\_with\_dblock.csv} и \texttt{data/geom\_nuclear\_complexity\_summary.csv};
+  \item выделяет элементы класса $d_\mathrm{octa}$ через функцию \texttt{classify\_geom\_row};
+  \item объединяет геометрические и сложностные характеристики по ключу $(Z,\mathrm{El})$;
+  \item вычисляет периодические и глобальные статистики по $(D,A,\langle C \rangle,C_\mathrm{max})$;
+  \item записывает итоговую таблицу и краткое текстовое резюме в \texttt{results/d\_block\_universality\_stats.txt}.
+\end{itemize}
+Полученные в этом анализе числа подтверждают, что d-элементы, доступные в текущей версии модели, действительно реализуют один и тот же «металлический супер-хаб-слой» вне зависимости от периода, в котором они располагаются.
+\end{law}
   
   \section{Текущий охват модели (``зелёная зона'')}
+
+\section*{Сводка геометрических законов (Geom-Mendeleev)}
+
+\paragraph{Закон геометрической периодичности D/A (s/p-блок).}
+Индексы $(D,A)$ для s-доноров, s-мостов, p-полу-хабов и p-акцепторов зависят главным образом от геометрического класса атомного графа и практически не зависят от номера периода. 
+В рамках geom-spec~v4.0 каждый класс (s\_donor, s\_bridge, p\_semihub, p\_acceptor, inert) поддерживает почти постоянные значения $D$ и $A$ по всем реализованным периодам, что подтверждено анализом \texttt{test\_geom\_periodicity\_sp.py}.
+
+\paragraph{Закон универсального d-слоя.}
+Элементы d-блока, относимые к классу шестипортовых октаэдрических графов $d_\mathrm{octa}$, образуют единый металлический слой: их положение на D/A-плоскости и характеристики ростовой сложности $(\langle C \rangle, C_\mathrm{max})$ слабо зависят от периода, но заметно превосходят p-хабы. 
+Численный анализ \texttt{scan\_dblock\_complexity.py} и \texttt{test\_d\_block\_universality.py} показывает, что d-элементы реализуют устойчивый «металлический супер-хаб-уровень» в геометрической таблице.
 \label{sec:status-green}
 
 Под ``зелёной зоной'' будем понимать те элементы модели, которые уже
