Geom-Mendeleev v3 scaffolding and extended tests

--- a/docs/name3.tex
+++ b/docs/name3.tex
@@ -5771,15 +5771,47 @@ Geom-Mendeleev~v2 уточняет этот закон, добавляя в не
   
   \section{Текущий охват модели (``зелёная зона'')}
 
-\section*{Сводка геометрических законов (Geom-Mendeleev)}
+\section*{Сводка геометрических и ядерно-геометрических законов}
+
+\paragraph{Закон ролей на D/A-плоскости.}
+Элементы, размещённые на плоскости индексов $(D,A)$, распадаются на устойчивые роли:
+\emph{terminator}, \emph{bridge}, \emph{hub}, \emph{inert}.
+Роли являются геометрическими аттракторами: небольшие изменения спектрального индекса $\chi_\mathrm{spec}$ или параметров калибровки почти всегда оставляют элемент в том же классе.
+
+\paragraph{Закон донорных и акцепторных плато.}
+s-блок образует донорные плато по $D$ при $A \approx 0$ (первый и второй столбцы), 
+p-элементы с тройной координацией формируют слабое полуплато $A \approx 0.12$,
+а классические p-акцепторы (C, N, O, F и их тяжёлые аналоги) лежат на сильном плато $A \approx 1.237$ при $D \approx 0$.
+Между ними возникает узкая амфотерная прослойка, поддерживающая переключаемую роль.
+
+\paragraph{Закон живых хабов.}
+При росте молекулярных деревьев ростовой машиной средняя и максимальная сложность графа $\langle C \rangle, C_{\max}$ 
+монотонно возрастают при переходе от terminator к bridge и далее к hub, причём живые p-хабы дают наибольшие значения сложности и размеров.
+Таким образом, хабовые роли выступают как \emph{живые центры} роста, концентрирующие большую часть сложных конфигураций.
+
+\paragraph{Закон спектральной комплементарности миров.}
+В донор-only мире рост ограничен и сложность графов мала; в чисто акцепторном мире структура становится существенно более богатой, 
+а в смешанном donor/acceptor-мире достигается максимальный спектр топологий и значений $C(G)$.
+Химический «ландшафт» определяется не отдельным элементом, а экосистемой ролей, которые допускает ростовая модель.
 
 \paragraph{Закон геометрической периодичности D/A (s/p-блок).}
-Индексы $(D,A)$ для s-доноров, s-мостов, p-полу-хабов и p-акцепторов зависят главным образом от геометрического класса атомного графа и практически не зависят от номера периода. 
-В рамках geom-spec~v4.0 каждый класс (s\_donor, s\_bridge, p\_semihub, p\_acceptor, inert) поддерживает почти постоянные значения $D$ и $A$ по всем реализованным периодам, что подтверждено анализом \texttt{test\_geom\_periodicity\_sp.py}.
+Индексы $(D,A)$ для s-доноров, s-мостов, p-полухабов и p-акцепторов зависят главным образом от геометрического класса атомного графа и практически не зависят от номера периода.
+В модели geom-spec~v4.0 каждый класс (s\_donor, s\_bridge, p\_semihub, p\_acceptor, inert) поддерживает почти постоянные значения $D$ и $A$ по всем реализованным периодам, что подтверждено анализом \texttt{test\_geom\_periodicity\_sp.py}.
 
 \paragraph{Закон универсального d-слоя.}
-Элементы d-блока, относимые к классу шестипортовых октаэдрических графов $d_\mathrm{octa}$, образуют единый металлический слой: их положение на D/A-плоскости и характеристики ростовой сложности $(\langle C \rangle, C_\mathrm{max})$ слабо зависят от периода, но заметно превосходят p-хабы. 
-Численный анализ \texttt{scan\_dblock\_complexity.py} и \texttt{test\_d\_block\_universality.py} показывает, что d-элементы реализуют устойчивый «металлический супер-хаб-уровень» в геометрической таблице.
+Элементы d-блока, относимые к классу шестипортовых октаэдрических графов $d_\mathrm{octa}$, образуют единый металлический слой:
+их положение на D/A-плоскости и характеристики ростовой сложности $(\langle C \rangle, C_{\max})$ слабо зависят от периода, 
+но заметно превосходят p-хабы.
+Численные сканы (\texttt{scan\_dblock\_complexity.py}, \texttt{test\_d\_block\_universality.py}) показывают устойчивый «металлический супер-хаб-уровень» d-блока.
+
+\paragraph{Закон ядерной $\beta$-совместимости геометрических ролей.}
+Все геометрические роли (terminator, bridge, hub, d-слой) живут на одной и той же нейтронобогатой $\beta$-долине $N_{\mathrm{best}}/Z \approx 1.7\text{--}1.8$,
+определяемой функционалом $F_\mathrm{nuc}$.
+Различия по ростовой живости и сложности возникают уже внутри этого узкого ядерного коридора, а не за счёт разных $N/Z$.
+
+\paragraph{Негативный закон прямой WS-калибровки.}
+Прямое включение спектральных WS-магических чисел в оболочечный член $F_\mathrm{nuc}$ приводит к систематическому смещению $\beta$-долины и росту ошибки по $|N_{\mathrm{best}}-N_\mathrm{exp}|$.
+Поэтому WS-режим остаётся экспериментальным, а в базовой модели используются legacy-наборы магических чисел, согласованные с наблюдаемым островом стабильности.
 \label{sec:status-green}
 
 Под ``зелёной зоной'' будем понимать те элементы модели, которые уже
