Add tree growth law analysis and documentation

--- a/docs/name3.tex
+++ b/docs/name3.tex
@@ -5769,6 +5769,47 @@ Geom-Mendeleev~v2 уточняет этот закон, добавляя в не
 Полученные в этом анализе числа подтверждают, что d-элементы, доступные в текущей версии модели, действительно реализуют один и тот же «металлический супер-хаб-слой» вне зависимости от периода, в котором они располагаются.
 \end{law}
   
+\subsection{Закон роста деревьев в модели ``Christmas Tree''}
+
+Ростовая модель, реализованная в модуле \texttt{grower.py}, строит молекулярные графы как вероятностное дерево роста: 
+из семенного атома с заданной ролью (terminator/bridge/hub) запускается процесс добавления новых узлов по свободным портам, 
+с ограничениями по максимальному размеру и глубине и с роль-зависимыми вероятностями продолжения роста. 
+В ``живых'' секторах параметров (Living Sectors) большая часть построенных конфигураций оказывается деревьями или графами с очень малым числом циклов.
+
+Топологическая сложность $C(G)$ вычисляется функционалом \texttt{compute\_complexity\_features} из \texttt{complexity.py}, 
+который аппроксимирует ``дерево + циклы'' схемой
+\[
+C(G) \;=\; \bigl(\underbrace{0.1\,n(G)}_{\text{ветвящаяся ``масса'' дерева}} + 
+\underbrace{\mathrm{cyclomatic}(G)\cdot(1+\bar{C}_\mathrm{loc})}_{\text{цикл-часть}}\bigr)
+\cdot \Phi_\mathrm{deg,var,clust}(G)\cdot \log_2\bigl(1+n(G)\bigr),
+\]
+где $n(G)$ — число вершин, $\bar{C}_\mathrm{loc}$ — средний локальный кластеринг, 
+а $\Phi_\mathrm{deg,var,clust}$ --- слабо меняющийся множитель, зависящий от плотности, дисперсии степеней и кластеринга.
+
+В \emph{деревянном режиме} $\mathrm{cyclomatic}(G)\approx 0$ и цикл-компонента пропадает, так что асимптотически
+\[
+C(G) \;\approx\; \alpha_{\mathrm{tree}}(G)\,n(G)\,\log\bigl(1+n(G)\bigr),
+\]
+где коэффициент $\alpha_{\mathrm{tree}}(G)$ слабо зависит от локального ветвления и фактически определяется ролью семенного атома и допустимым набором ролей в ростовой экосистеме.
+Численные сканы \texttt{scan\_living\_sectors.py}, \texttt{scan\_living\_sectors\_segregated.py} и специальный тест \texttt{test\_tree\_growth\_law.py} показывают, 
+что нормализованный показатель
+\[
+\frac{C(G)}{n(G)\,\log(1+n(G))}
+\]
+концентрируется в узких кластерах для разных рольевых семян: 
+bridges дают один характерный уровень, p-hubs --- существенно более высокий, 
+а terminators остаются в ``мёртвом'' режиме с малым $n$ и слабым ростом сложности.
+
+\begin{law}[Закон роста деревьев]
+В живых секторах ростовой модели ``Christmas Tree'' большинство молекулярных конфигураций являются деревьями с асимптотическим ростом сложности
+\[
+C(G)\sim \alpha_{\mathrm{tree}}\,n(G)\,\log(1+n(G)),
+\]
+где $\alpha_{\mathrm{tree}}$ --- устойчивый, роль-зависимый коэффициент.
+Отличия между элементами в этом режиме проявляются не в самой форме зависимостей $C(n)$ (она одинакова для всех живых деревьев), 
+а в уровнях нормированной сложности $C(G)/\bigl(n\log(1+n)\bigr)$, задающих иерархию terminator $\ll$ bridge $\ll$ hub.
+\end{law}
+
   \section{Текущий охват модели (``зелёная зона'')}
 
 \section*{Сводка геометрических и ядерно-геометрических законов}
@@ -5812,6 +5853,13 @@ p-элементы с тройной координацией формируют
 \paragraph{Негативный закон прямой WS-калибровки.}
 Прямое включение спектральных WS-магических чисел в оболочечный член $F_\mathrm{nuc}$ приводит к систематическому смещению $\beta$-долины и росту ошибки по $|N_{\mathrm{best}}-N_\mathrm{exp}|$.
 Поэтому WS-режим остаётся экспериментальным, а в базовой модели используются legacy-наборы магических чисел, согласованные с наблюдаемым островом стабильности.
+
+\paragraph{Закон роста деревьев.}
+В ростовой модели ``рождественской ёлки'' при живых параметрах почти все сгенерированные молекулы являются деревьями (цикломатическое число $\mathrm{cyclomatic}(G)\approx 0$).
+Для таких графов функционал сложности принимает вид
+$C(G)\sim \alpha_{\mathrm{tree}}\,n(G)\,\log(1+n(G))$,
+где $n(G)$ — число вершин, а коэффициент $\alpha_{\mathrm{tree}}$ медленно зависит от рольевого состава и локального ветвления.
+Нормированная величина $C(G)/\bigl(n\log(1+n)\bigr)$ концентрируется вокруг устойчивых уровней для донорных мостов и хабов, задавая универсальную ``ёлочную'' траекторию роста сложности в живых секторах.
 \label{sec:status-green}
 
 Под ``зелёной зоной'' будем понимать те элементы модели, которые уже
